--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "name": "porchswing",
   "version": "1.0.0",
   "description": "Porchswing revamp",
-  "main": "server/server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "test": ""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "colors": "^1.1.2",
     "cors": "^2.7.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "lodash": "^4.6.1",
+    "mongoose": "^4.4.7",
+    "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "supertest": "^1.2.0"
   }
 }
