--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.3",
     "body-parser": "^1.15.0",
+    "bootstrap-material-design": "^4.0.1",
     "colors": "^1.1.2",
     "cors": "^2.7.1",
     "express": "^4.13.4",
